# BIM

./: .env  Cargo.toml  README.md
migrations/: 0001_create_workflow_tables.down.sql  0001_create_workflow_tables.up.sql  0002_create_process_order_tables.down.sql  0002_create_process_order_tables.up.sql
src/: handler.rs  handler_master.rs  main.rs  model.rs  schema.rs
