[package]
name = "BIM"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
proc-macro2 = "1.0.106"
actix-cors = "0.7.1"
actix-web = "4.13.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono", "bigdecimal"] }
bigdecimal = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
